# ClientServerApp

./: CMakeLists.txt  README.md
ClientServerApp/: CMakeLists.txt
ClientServerApp/Client/: CMakeLists.txt  Client.cpp
ClientServerApp/Networking/: CMakeLists.txt
ClientServerApp/Networking/include/Networking/: TCP_Client.h  TCP_Connection.h  TCP_Server.h
ClientServerApp/Networking/src/: TCP_Client.cpp  TCP_Connection.cpp  TCP_Server.cpp
ClientServerApp/Server/: CMakeLists.txt  Server.cpp  Server.h
